# MOJO

./: CMakeLists.txt  README.md  Sample.configfile.txt
cmake/: PostInstall.cmake
include/: Config.h  DiscordantClusterFinder.h  DiscordantReadFinder.h  FastqParser.h  FusionCompiler.h  FusionJunction.h  FusionQuant.h  GeneModel.h  GeneModelObjs.h  JunctionAligner.h  JunctionBuilder.h  JunctionFilter.h  Logger.h  MOJOConfig.h  PSLParser.h  Read.h  Utils.h
src/: CMakeLists.txt  Config.cpp  DiscordantClusterFinder.cpp  DiscordantReadFinder.cpp  FastqParser.cpp  FilterJunctAlignOutput.cpp  FusionCompiler.cpp  FusionJunction.cpp  FusionQuant.cpp  GeneModel.cpp  GeneModelObjs.cpp  JunctionAligner.cpp  JunctionBuilder.cpp  JunctionFilter.cpp  Logger.cpp  MOJO.cpp  MOJORefBuilder.cpp  MegablastOutputCompiler.cpp  PSLParser.cpp  Read.cpp  SplitFastqEvenly.cpp  StreamNthFastqSplit.cpp  Utils.cpp
